--- a/src/components/navbar2/Navbar.css
+++ b/src/components/navbar2/Navbar.css
@@ -26,6 +26,7 @@
 
 .nav-menu.active {
   left: 0;
+  z-index: 6;
   transition: 350ms;
 }
 
@@ -65,8 +66,4 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-}
-
-span {
-  margin-left: 16px;
 }
