removed env dependency and added demo concept

--- a/src/components/navbar2/Navbar.css
+++ b/src/components/navbar2/Navbar.css
@@ -6,6 +6,14 @@
   align-items: center;
 }
 
+.navbar .navbartitle{
+    color: white;
+    margin-left: 10%;
+    font-size: 2rem;
+    align-self: flex-center;
+  
+}
+
 .menu-bars {
   margin-left: 2rem;
   font-size: 2rem;
